--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kirana Dukaan</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+
+{% block content %}
     <h1>Kirana Dukaan</h1>
-    <p>We welcomes you to our supermarket, we hope you eat fresh and healthy.</p>
+    <p>We welcome you to our supermarket, we hope you eat fresh and healthy.</p>
     <br>
     <p>We wish you luck Mr. {{ name }}</p>
-</body>
-</html>
+{% endblock %}
