--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,10 +15,11 @@
 <body>
     {% include 'navbar.html' with context %}
 
-    <div class="container">
+    <div class="container mt-3">
+        {% include 'messages.html' %}
+
         {% block content %}
-            
-        {% endblock %}
+            {% endblock %}
     </div>
     
     {% block script %}
