--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,17 +1,27 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Kirana Dukaan 🛒</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ms-auto">
+        {% if session.get('user_id') %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('main.profile') }}">My Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-danger" href="{{ url_for('main.logout') }}">Logout</a>
+        </li>
+        {% else %}
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('main.login') }}">Login</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('main.register') }}">Register</a>
         </li>
+        {% endif %}
       </ul>
     </div>
   </div>
