--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,6 +9,9 @@
       <ul class="navbar-nav ms-auto">
         {% if session.get('user_id') %}
         <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{ url_for('main.profile') }}">My Profile</a>
         </li>
         <li class="nav-item">
